--- a/index.html
+++ b/index.html
@@ -4,38 +4,57 @@
    <meta charset="UTF-8">
    <title>Рlay</title>
    <style> 
-   body{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      align-content: center;
-      background-color: white;
-   }
-   button{
-      width: 150px;
-      height: 40px;
-      margin-bottom: 20px;
-      margin-top: 10px;
-      border-radius: 40%;
-      color: aliceblue;
-      background-color: rgb(19, 19, 22);
-   }
-   </style>
+   
+ 
+   body {
+            display: flex;
+            flex-direction: column;
+            justify-content:space-around;
+            align-items: center;
+            height: 100vh;
+        }
+        button {
+            width: 100px;
+            height: 50px;
+            margin-bottom: 10px;
+            color: rgb(32, 31, 31);
+            background-color: rgb(244, 209, 12);
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        div{
+            font-size:  20px;
+            display: flex;
+            margin-left: 20px;
+            width: 100px;
+        }
+        h2{
+         font-size: 15px;
+         margin-top: 4px;
+         margin-left: 10px;
+         color: crimson;
+        }
+        h3{
+         font-size: 15px;
+         margin-top: 4px;
+         margin-left: 10px;
+         color: blue;
+        }
+        h4{
+         font-size: 15px;
+         margin-top: 4px;
+         margin-left: 10px;
+         color: rgb(255, 85, 0);
+        }
+    </style>
 </head>
 <body>
-   <h1>Камень, Ножницы, Бумага</h1>
-   <div class="score" style="display: flex;">
-      <span style="margin-right: 5px">Игрок:</span><div class="player">0</div>
-      <span>:</span>
-      <div class="computer">0</div><span> : Компьютер</span>
-   </div>
-   <div class="message"></div>
-
-   
-   <button>Камень</button>
-   <button>Ножницы</button>
-   <button>Бумага</button>
+    <h1>Камень! Ножницы! Бумага!</h1>
+    <div>Компьютер:<h2></h2></div>
+    <div>Победа:<h3></h3></div>
+    <div>Счет: <h4></h4></div>
+    <button>Start Play</button>
+    
 </body>
 <script src="js/app.js"></script>
 </html>
